@@ -4,11 +4,13 @@ import org.mio.progettoingsoft.*;
 import org.mio.progettoingsoft.advCards.*;
 import org.mio.progettoingsoft.advCards.sealed.*;
 import org.mio.progettoingsoft.components.GoodType;
+import org.mio.progettoingsoft.components.GuestType;
 import org.mio.progettoingsoft.components.HousingColor;
 import org.mio.progettoingsoft.exceptions.CannotRotateHourglassException;
 import org.mio.progettoingsoft.exceptions.IncorrectFlyBoardException;
 import org.mio.progettoingsoft.exceptions.InvalidCordinate;
 import org.mio.progettoingsoft.model.FlyBoardNormal;
+import org.mio.progettoingsoft.model.enums.CannonType;
 import org.mio.progettoingsoft.model.enums.GameInfo;
 import org.mio.progettoingsoft.model.enums.GameMode;
 import org.mio.progettoingsoft.network.client.ClientController;
@@ -26,8 +28,6 @@ import static org.mio.progettoingsoft.views.tui.CircuitCell.GREEN;
 public class Tui implements View {
     private Scanner scanner = new Scanner(System.in);
     private final ClientController controller;
-
-    private final Object lockView = new Object();
 
     public static final String RESET = "\u001B[0m";
     public static final String RED = "\u001B[31m";
@@ -54,6 +54,7 @@ public class Tui implements View {
 
     @Override
     public void run() {
+        Logger.setMinLevel(Logger.Level.WARNING);
         this.updateTui(GameState.START);
         try {
             while (true) {
@@ -69,39 +70,42 @@ public class Tui implements View {
         switch (state) {
             case START -> printConnectionMenu();
             case NICKNAME -> askNickname();
-            case WAITING -> checkEndBuilding();
-
-            case GAME_MODE -> printGameModeMenu();
-            case GAME_START -> {
-                System.out.println("game started");
-                printPlayersName();
-                controller.setState(GameState.WAITING);
+            case ERROR_NICKNAME -> {
+                System.out.println(RED + "Nickname already taken. Try Something else!" + RESET);
+                controller.setState(GameState.NICKNAME);
             }
+            case WAITING -> System.out.println(BLUE + "Waiting..." + RESET);
+            case GAME_MODE -> printGameModeMenu();
+            case WAITING_PLAYERS -> System.out.println(BLUE + "Waiting for other players..." + RESET);
+            case GAME_START -> printStartGameInfo();
+            case BUILDING_SHIP -> buildingShipMenu();
+            case COMPONENT_MENU -> componentMenu();
+            case ADD_COMPONENT -> addComponent();
+            case ERROR_PLACEMENT -> {
+                clearConsole();
+                System.out.println(RED + "Invalid position. Try again.\n" + RESET);
+                controller.setState(GameState.ADD_COMPONENT);
+            }
+            case DRAW_UNCOVERED_COMPONENTS -> drawUncoveredComponents();
+            case UNABLE_UNCOVERED_COMPONENT -> {
+                System.out.println(RED + "You can't take this component." + RESET);
+                controller.setState(GameState.DRAW_UNCOVERED_COMPONENTS);
+            }
+            case VIEW_BOOKED -> viewBookedComponents();
+            case SWITCH_BOOKED -> switchBookedComponents();
+            case VIEW_SHIP_BUILDING -> viewShipBuilding();
+            case VIEW_DECKS_LIST -> viewDecksList();
+            case VIEW_DECK -> viewDeck();
+            case UNABLE_DECK -> {
+                clearConsole();
+                System.out.println(RED + "You can't take this deck." + RESET);
+                controller.setState(GameState.BUILDING_SHIP);
+            }
+
+
             case WRONG_POSITION -> {
                 System.out.println(RED + "Current position is already occupied" + RESET);
                 controller.setState(GameState.CHOOSE_POSITION);
-            }
-
-            case BUILDING_SHIP -> {
-                buildingShipMenu();
-            }
-
-            case COMPONENT_MENU -> {
-                componentMenu();
-            }
-
-            case ADD_COMPONENT -> addComponent();
-
-            case VIEW_SHIP_BUILDING -> {
-                viewShipBuilding();
-                controller.setState(GameState.BUILDING_SHIP);
-            }
-
-            case DRAW_UNCOVERED_COMPONENTS -> drawUncoveredComponents();
-
-            case UNABLE_DECK -> {
-                System.out.println("Deck is already been taken");
-                controller.setState(GameState.BUILDING_SHIP);
             }
 
             case CHOICE_BUILT -> {
@@ -115,7 +119,6 @@ public class Tui implements View {
                     controller.setState(GameState.END_BUILDING);
                 }
             }
-
             case FINISH_LAST_HOURGLASS -> {
                 //todo : problema quando setto lo stato a choose_position dato che prima lo stato era a ship_building o qualcosa
                 //di simile e deve processare l'input mi genera un'eccezione
@@ -142,12 +145,9 @@ public class Tui implements View {
 //                controller.applyStardust(card);
 //            }
 
-            case VIEW_DECK -> viewDeck();
 
-            case VIEW_DECKS_LIST -> viewDecksList();
 
-            case VIEW_BOOKED -> viewBookedComponents();
-            case SWITCH_BOOKED -> switchBookedComponents();
+
             case END_BUILDING -> endBuildingMenu();
             case CHOOSE_POSITION -> {
                 System.out.print("Choose position: ");
@@ -155,20 +155,6 @@ public class Tui implements View {
                 System.out.println("Waiting for other players" + RESET);
             }
             case VALIDATION -> printValidationMenu();
-            case UNABLE_UNCOVERED_COMPONENT -> {
-                System.out.println("Component is already been taken");
-                controller.setState(GameState.BUILDING_SHIP);
-            }
-
-            case ERROR_NICKNAME -> {
-                System.out.println("Nickname already taken. Try Something else\n");
-                controller.setState(GameState.NICKNAME);
-            }
-
-            case ERROR_PLACEMENT -> {
-                System.out.println("Invalid Position. Try again.\n\n");
-                controller.setState(GameState.ADD_COMPONENT);
-            }
 
             case DRAW_CARD -> {
                 printWaitingTheLeader();
@@ -179,6 +165,10 @@ public class Tui implements View {
             case NEW_CARD -> printNewCard();
 
             case CARD_EFFECT -> cardEffect();
+
+            case IDLE -> {
+
+            }
         }
     }
 
@@ -195,7 +185,6 @@ public class Tui implements View {
             System.out.println("1 : RMI");
             System.out.println("2 : Socket");
             System.out.print("Make your choice: ");
-
             input = scanner.nextLine();
 
             try {
@@ -214,87 +203,434 @@ public class Tui implements View {
         clearConsole();
     }
 
-    private void printWaitingTheLeader() {
-        System.out.println("The effect of the card is over, this is the actual circuit");
-        synchronized (controller.getFlyboardLock()) {
-            controller.getFlyBoard().drawScoreboard();
-            controller.getFlyBoard().drawCircuit();
+    /**
+     * Message shown to the client after the registration success, asks for the nickname
+     */
+    private void askNickname() {
+        String nickname = "";
+
+        while (true) {
+            System.out.print("Insert your nickname: ");
+            nickname = scanner.nextLine();
+
+            if (!nickname.isEmpty()) {
+                break;
+            }
+
+            System.out.println(RED + "Nickname cannot be empty!" + RESET);
         }
-        System.out.println("Waiting for the leader to draw a new card");
+
+        controller.handleNickname(nickname);
+        clearConsole();
     }
 
-    private void printNewCard() {
-        System.out.println("A new card has been drawn");
-        controller.getPlayedCard().disegnaCard();
+    /**
+     * Message to notify the clients the start of the game
+     */
+    private void printStartGameInfo() {
+        System.out.println(BLUE + "THE GAME HAS STARTED!" + RESET);
+        System.out.println("Game id: " + controller.getGameInfo().gameId());
+        System.out.println("Game mode: " + controller.getGameInfo().mode());
+        System.out.println("Players:");
+        printPlayersName();
     }
 
-    private void printValidationMenu() {
-        System.out.println(BLUE + "End building, validating ship:\n" + RESET);
+    /**
+     * Message to show building ship menu
+     */
+    private void buildingShipMenu() {
+        GameMode mode = controller.getFlyBoard().getMode();
+        if (firstBuilding) {
+            System.out.println(BLUE + "IT'S TIME TO BUILD YOUR SHIP!" + RESET);
+            firstBuilding = false;
+            //decido di far partire la clessidra dal client con la firstHousing blu che c'è in ogni partita Add commentMore actions
+            if(controller.getShipBoard().getHousingColor().equals(HousingColor.BLUE)  && mode.equals(GameMode.NORMAL)){
+                controller.startHourglass();
+            }
+        }
 
-        List<Cordinate> incorrectComponents = controller.getIncorrectComponents();
+        int choice = -1;
+        String input = "";
+        System.out.println("1 : Pick covered component");
+        System.out.println("2 : Pick uncovered component");
+        System.out.println("3 : Pick booked component");
+        System.out.println("4 : View other player's ship");
+
+        if (mode.equals(GameMode.NORMAL)) {
+            System.out.println("5 : Look at decks");
+            System.out.println("6 : End ship building");
+            System.out.println("7 : Load automatic shipboard");
+            System.out.println("8 : Rotate hourglass");
+        } else {
+            System.out.println("5 : End building ship");
+        }
+        System.out.print("Make your choice: ");
+        input = scanner.nextLine();
+
+        try {
+            choice = Integer.parseInt(input);
+
+            if (choice < 1) {
+                throw new Exception("");
+            } else if (mode.equals(GameMode.NORMAL) && choice > 8) {
+                throw new Exception("");
+            } else if (mode.equals(GameMode.EASY) && choice > 5) {
+                throw new Exception("");
+            }
+        } catch (Exception e) {
+            System.out.println(RED + "Invalid choice!" + RESET);
+            controller.setState(GameState.BUILDING_SHIP);
+            return;
+        }
+
+        try {
+            if(!controller.getFinishedLastHourglass())
+                controller.handleBuildingShip(choice);
+        } catch (CannotRotateHourglassException e) {
+            System.out.println(RED + "You can't rotate hourglass!" + RESET);
+            controller.setState(GameState.BUILDING_SHIP);
+        } catch (RuntimeException e) {
+            Throwable cause = e.getCause();
+            if (cause instanceof CannotRotateHourglassException) {
+                System.out.println(RED + cause.getMessage() + RESET);
+            } else {
+                throw e;
+            }
+            controller.setState(GameState.BUILDING_SHIP);
+        }
+        clearConsole();
+    }
+
+    /**
+     * Message to show component menu
+     */
+    private void componentMenu() {
+        int choice = -1;
+        String input = "";
+
+        while (choice < 1 || choice > 3) {
+            printShipAndDrewComponent();
+
+            System.out.println("1 : Insert in the shipboard");
+            System.out.println("2 : Put back in the deck");
+            System.out.println("3 : Book for later");
+            System.out.print("Make your choice: ");
+            input = scanner.nextLine();
+
+            try {
+                choice = Integer.parseInt(input);
+
+                if (choice < 1 || choice > 3) {
+                    clearConsole();
+                    System.out.println(RED + "Invalid choice!" + RESET);
+                }
+            } catch (Exception e) {
+                clearConsole();
+                System.out.println(RED + "Invalid choice!" + RESET);
+            }
+        }
+
+        if (choice == 1) {
+            controller.setState(GameState.ADD_COMPONENT);
+        } else if (choice == 2) {
+            clearConsole();
+            System.out.println(GREEN + "Component discarded." + RESET);
+            controller.discardComponent();
+        } else if (choice == 3) {
+            clearConsole();
+            System.out.println(GREEN + "Component booked." + RESET);
+            controller.bookComponent();
+        }
+    }
+
+    /**
+     * Prints the menu to add component, asks for row, column and rotation
+     */
+    private void addComponent() {
+        String input = "";
+
+        int row = 0;
+        while (row < 5 || row > 9) {
+            System.out.print("Insert row: ");
+            input = scanner.nextLine();
+
+            try {
+                row = Integer.parseInt(input);
+                if (row < 5 || row > 9) {
+                    clearConsole();
+                    System.out.println(RED + "Invalid row!" + RESET);
+                    printShipAndDrewComponent();
+                }
+            } catch (Exception e) {
+                clearConsole();
+                System.out.println(RED + "Invalid row!" + RESET);
+                printShipAndDrewComponent();
+            }
+        }
+
+        int column = 0;
+        while (column < 4 || column > 10) {
+            System.out.print("Insert column: ");
+            input = scanner.nextLine();
+
+            try {
+                column = Integer.parseInt(input);
+                if (column < 4 || column > 10) {
+                    clearConsole();
+                    System.out.println(RED + "Invalid column!" + RESET);
+                    printShipAndDrewComponent();
+                    System.out.println("Selected row: " + row);
+                }
+            } catch (Exception e) {
+                clearConsole();
+                System.out.println(RED + "Invalid column!" + RESET);
+                printShipAndDrewComponent();
+                System.out.println("Selected row: " + row);
+            }
+        }
+
+        int rotation = -1;
+        while (rotation < 0 || rotation > 3) {
+            System.out.print("Insert rotation: ");
+            input = scanner.nextLine();
+
+            try {
+                rotation = Integer.parseInt(input);
+                if (rotation < 0 || rotation > 3) {
+                    clearConsole();
+                    System.out.println(RED + "Invalid rotation!" + RESET);
+                    printShipAndDrewComponent();
+                    System.out.println("Selected row: " + row);
+                    System.out.println("Selected column: " + column);
+                }
+            } catch (Exception e) {
+                System.out.println(RED + "Invalid rotation!" + RESET);
+                printShipAndDrewComponent();
+                System.out.println("Selected row: " + row);
+                System.out.println("Selected column: " + column);
+            }
+        }
+
+        ShipBoard ship = controller.getShipBoard();
+        Cordinate cord = new Cordinate(row - ship.getOffsetRow(), column - ship.getOffsetCol());
+        try {
+            controller.addComponent(cord, rotation);
+        } catch (InvalidCordinate e) {
+            controller.setState(GameState.ERROR_PLACEMENT);
+        }
+
+        clearConsole();
+        System.out.println(GREEN + "Component added to ship." + RESET);
+    }
+
+    /**
+     * Prints uncovered components
+     */
+    private void drawUncoveredComponents() {
+        int count = 1;
+        if (controller.getFlyBoard().getUncoveredComponents().isEmpty()) {
+            clearConsole();
+            System.out.println(RED + "No uncovered Components" + RESET);
+            controller.setState(GameState.BUILDING_SHIP);
+            return;
+        }
 
         String input = "";
-        while (!incorrectComponents.isEmpty()) {
-            controller.getShipBoard().drawShipboard();
-            System.out.println("Following components are not properly connected: " + incorrectComponents);
-            System.out.print("Select a incorrect component to remove from the list (1 - " + incorrectComponents.size() + "): ");
-            input = scanner.nextLine().trim().toLowerCase();
+        int chosen = -2;
+        while (chosen < -1) {
+            printUncoveredComponent();
+            System.out.print("Insert id component to draw (-1 to cancel): ");
+            input = scanner.nextLine();
 
-            int choice = -1;
-            while(choice < 1 || choice > incorrectComponents.size()) {
-                try {
-                    choice = Integer.parseInt(input);
-
-                    if (choice < 1 || choice > incorrectComponents.size()) {
-                        System.out.println(RED + "Invalid choice!" + RESET);
-                    }
-                } catch (Exception e) {
-                    System.out.println(RED + "Invalid choice!" + RESET);
-                }
+            try {
+                chosen = Integer.parseInt(input);
+            } catch (Exception e) {
+                clearConsole();
+                System.out.println(RED + "Invalid choice." + RESET);
             }
-
-            controller.removeComponentImmediate(incorrectComponents.get(choice - 1));
-
-            incorrectComponents = controller.getIncorrectComponents();
         }
 
-        List<Set<Component>> standAloneBlocks = controller.getStandAloneBlocks();
-        if (standAloneBlocks.size() > 1) {
-            System.out.println("There are blocks of components that are not connected to each other. These are the stand alone blocks:");
-            for (Set<Component> standAloneBlock : standAloneBlocks) {
-                System.out.println("Block: " + standAloneBlock.stream().map(Component::getCordinate).toList());
-            }
-
-            System.out.print("Which one do you want to keep? Select between 1 - " + standAloneBlocks.size() + ": ");
-            input = scanner.nextLine().trim().toLowerCase();
-            int choice = -1;
-            while(choice < 0){
-                try {
-                    choice = Integer.parseInt(input);
-
-                    if (choice < 1 || choice > standAloneBlocks.size()) {
-                        choice = -1;
-                        System.out.println(RED + "Invalid choice!" + RESET);
-                    }
-                } catch (Exception e) {
-                    System.out.println(RED + "Invalid choice!" + RESET);
-                }
-            }
-
-            controller.removeStandAloneBlocks(choice - 1);
-
-            System.out.println("Components removed!");
+        if (chosen == -1) {
+            clearConsole();
+            System.out.println(GREEN + "None uncovered component selected." + RESET);
+            controller.setState(GameState.BUILDING_SHIP);
+        } else {
+            clearConsole();
+            controller.drawUncovered(chosen);
         }
-
-        controller.endValidation();
-        System.out.println(BLUE + "End of validation phase." + RESET);
     }
 
+    /**
+     * Prints menu to switch components
+     */
+    private void viewBookedComponents() {
+        List<Integer> bookedComponentIds = controller.getShipBoard().getBookedComponents().stream()
+                .flatMap(Optional::stream)
+                .toList();
+
+        int count = 1;
+        for (Integer id : bookedComponentIds) {
+            System.out.println("Component # " + count++);
+            Component component = controller.getFlyBoard().getComponentById(id);
+            new ShipCell(component).drawCell();
+        }
+
+        int chosen;
+        while (true) {
+            System.out.print("Select component to draw (-1 to null): ");
+            String input = scanner.nextLine();
+
+            try {
+                chosen = Integer.parseInt(input);
+
+                if (chosen == -1) {
+                    clearConsole();
+                    System.out.println(GREEN + "No component selected." + RESET);
+                    controller.setState(GameState.BUILDING_SHIP);
+                    return;
+                }
+
+                if (chosen > 0 && chosen < count) {
+                    controller.choseBookedComponent(chosen);
+                    break;
+                } else {
+                    clearConsole();
+                    System.out.println(RED + "Invalid component index." + RESET);
+                }
+
+            } catch (NumberFormatException e) {
+                clearConsole();
+                System.out.println(RED + "Invalid input. Please enter a number." + RESET);
+            }
+        }
+
+    }
+
+    /**
+     * Prints menu to switch components
+     */
+    private void switchBookedComponents() {
+        List<Integer> bookedComponentIds = controller.getShipBoard().getBookedComponents().stream()
+                .flatMap(Optional::stream)
+                .toList();
+
+        int count = 1;
+        for (Integer id : bookedComponentIds) {
+            System.out.println("Component # " + id);
+            Component component = controller.getFlyBoard().getComponentById(id);
+            new ShipCell(component).drawCell();
+        }
+
+        int chosenComp;
+        while (true) {
+            System.out.print("Select the component to switch (-1 to cancel): ");
+            String input = scanner.nextLine();
+
+            try {
+                chosenComp = Integer.parseInt(input);
+
+                if (chosenComp == -1) {
+                    clearConsole();
+                    System.out.println(GREEN + "No switch component." + RESET);
+                    controller.setState(GameState.COMPONENT_MENU);
+                    return;
+                }
+
+                if (bookedComponentIds.contains(chosenComp)) {
+                    controller.bookComponent(bookedComponentIds.indexOf(chosenComp));
+                    break;
+                } else {
+                    clearConsole();
+                    System.out.println(RED + "Invalid chosen component." + RESET);
+                }
+
+            } catch (NumberFormatException e) {
+                clearConsole();
+                System.out.println(RED + "Invalid input. Please enter a number." + RESET);
+            }
+        }
+    }
+
+    /**
+     * Prints other players ship
+     */
+    private void viewShipBuilding() {
+        clearConsole();
+
+        String chosenPlayer = "";
+        while (true) {
+            System.out.println("These are the players: ");
+            printPlayersName();
+            System.out.print("Insert nickname to look at: ");
+            chosenPlayer = scanner.nextLine();
+
+            try {
+                if (chosenPlayer.isEmpty()) {
+                    clearConsole();
+                    System.out.println(RED + "Invalid nickname!" + RESET);
+                } else {
+                    controller.getFlyBoard().getPlayerByUsername(chosenPlayer).getShipBoard().drawShipboard();
+                    System.out.println("Press enter to continue...");
+                    String buffer = scanner.nextLine();
+                    clearConsole();
+                    break;
+                }
+            } catch (IncorrectFlyBoardException e) {
+                clearConsole();
+                System.out.println(RED + "Invalid nickname!" + RESET);
+            }
+        }
+        controller.setState(GameState.BUILDING_SHIP);
+    }
+
+    /**
+     * Prints decks list
+     */
+    private void viewDecksList() {
+        String input = "";
+        int chosen = -1;
+        while (chosen < 0 || chosen > controller.getFlyBoard().getAvailableDecks().getLast()) {
+            System.out.println("Available decks: ");
+            for (int numberDeck : controller.getFlyBoard().getAvailableDecks()) {
+                System.out.println("Deck #" + numberDeck);
+            }
+            System.out.print("Choose deck number: ");
+            input = scanner.nextLine();
+            try {
+                chosen = Integer.parseInt(input);
+
+                if (chosen < -1 || chosen > controller.getFlyBoard().getAvailableDecks().getLast()) {
+                    clearConsole();
+                    System.out.println(RED + "Invalid choice." + RESET);
+                }
+            } catch (Exception e) {
+                clearConsole();
+                System.out.println(RED + "Invalid choice." + RESET);
+            }
+        }
+        controller.bookDeck(chosen);
+    }
+
+    /**
+     * Prints selected deck
+     */
+    private void viewDeck() {
+        System.out.println("Deck #" + controller.getInHandDeck() + " in hand.");
+        printDeck();
+        System.out.println("Press enter to continue...");
+        String buffer = scanner.nextLine();
+        clearConsole();
+        controller.freeDeck();
+    }
+
+    /**
+     * Prints end of building menu
+     */
     private void endBuildingMenu(){
-        System.out.println("Waiting for other players" + RESET);
+        System.out.println(BLUE + "Waiting for other players" + RESET);
         if (!controller.getFinishedLastHourglass() && !controller.getPendingHourglass()) {
+            String input = "";
             System.out.println("Type \"r\" to rotate hourglass");
-            String input = " ";
             while(!input.equalsIgnoreCase("r")){
                 input = scanner.nextLine();
             }
@@ -315,41 +651,137 @@ public class Tui implements View {
         }
     }
 
+    /**
+     * Prints choose position menu
+     */
     private void printChoosePosition() {
+        clearConsole();
+        System.out.println("Choose position: ");
         List<Integer> availablePlaces = controller.getAvailablePlacesOnCircuit();
         String input = "";
         int choice = -1;
         int k = 0;
         while (!availablePlaces.contains(choice)) {
             controller.getFlyBoard().drawCircuit();
-            System.out.println("In which of these available position do you want to start ?");
+            System.out.println("In which of these available position do you want to start?");
             for (Integer i : availablePlaces) {
                 k = FlyBoardNormal.indexToPosition(i);
                 System.out.println(k);
             }
+            System.out.print("Make a choice: ");
             input = scanner.nextLine();
             try {
                 choice = Integer.parseInt(input);
                 choice = FlyBoardNormal.positionToIndex(choice);
                 if (!availablePlaces.contains(choice)) {
+                    clearConsole();
                     System.out.println(RED + "Invalid choice!" + RESET);
                 }
             } catch (Exception e) {
+                clearConsole();
                 System.out.println(RED + "Invalid choice!" + RESET);
             }
         }
         controller.choosePlace(choice);
+
+        System.out.println(BLUE + "Waiting for other players" + RESET);
     }
 
+    /**
+     * Prints validation menu
+     */
+    private void printValidationMenu() {
+        clearConsole();
+        System.out.println(BLUE + "END BUILDING PHASE, IT'S NOW TIME TO VALIDATE YOUR SHIP:" + RESET);
+
+        List<Cordinate> incorrectComponents = controller.getIncorrectComponents();
+
+        String input = "";
+        while (!incorrectComponents.isEmpty()) {
+            int choice = -1;
+            while(choice < 1 || choice > incorrectComponents.size()) {
+                controller.getShipBoard().drawShipboard();
+                System.out.println("Following components are not properly connected: " + incorrectComponents);
+                System.out.print("Select a incorrect component to remove from the list (1 - " + incorrectComponents.size() + "): ");
+                input = scanner.nextLine().trim().toLowerCase();
+
+                try {
+                    choice = Integer.parseInt(input);
+
+                    if (choice < 1 || choice > incorrectComponents.size()) {
+                        clearConsole();
+                        System.out.println(RED + "Invalid choice!" + RESET);
+                    }
+                } catch (Exception e) {
+                    clearConsole();
+                    System.out.println(RED + "Invalid choice!" + RESET);
+                }
+            }
+
+            controller.removeComponentImmediate(incorrectComponents.get(choice - 1));
+            incorrectComponents = controller.getIncorrectComponents();
+        }
+
+        List<Set<Component>> standAloneBlocks = controller.getStandAloneBlocks();
+        if (standAloneBlocks.size() > 1) {
+            int choice = -1;
+            while(choice < 0){
+                System.out.println("There are blocks of components that are not connected to each other. These are the stand alone blocks:");
+                for (Set<Component> standAloneBlock : standAloneBlocks) {
+                    System.out.println("Block: " + standAloneBlock.stream().map(Component::getCordinate).toList());
+                }
+
+                System.out.print("Which one do you want to keep? Select between 1 - " + standAloneBlocks.size() + ": ");
+                input = scanner.nextLine().trim().toLowerCase();
+
+                try {
+                    choice = Integer.parseInt(input);
+
+                    if (choice < 1 || choice > standAloneBlocks.size()) {
+                        choice = -1;
+                        clearConsole();
+                        System.out.println(RED + "Invalid choice!" + RESET);
+                    }
+                } catch (Exception e) {
+                    clearConsole();
+                    System.out.println(RED + "Invalid choice!" + RESET);
+                }
+            }
+
+            controller.removeStandAloneBlocks(choice - 1);
+            System.out.println(GREEN + "Components removed!" + RESET);
+        }
+
+        controller.endValidation();
+        System.out.println(BLUE + "End of validation phase." + RESET);
+    }
+
+    /**
+     * Prints initial circuit
+     */
+    private void printWaitingTheLeader() {
+        clearConsole();
+        System.out.println("The effect of the card is over, this is the actual circuit:");
+        synchronized (controller.getFlyboardLock()) {
+            controller.getFlyBoard().drawScoreboard();
+            controller.getFlyBoard().drawCircuit();
+        }
+        System.out.println("Waiting for the leader to draw a new card...");
+    }
+
+    /**
+     * Prints initial circuit for leader
+     */
     private void printDrawCardMenu() {
-        System.out.println("The effect of the card is over, this is the actual circuit");
+        clearConsole();
+        System.out.println("The effect of the card is over, this is the actual circuit: ");
         synchronized (controller.getFlyboardLock()) {
             controller.getFlyBoard().drawScoreboard();
             controller.getFlyBoard().drawCircuit();
         }
         String input = "";
         while (!input.equalsIgnoreCase("d")) {
-            System.out.println("You are the leader! You can draw a Card, type \"d\" to draw a Card");
+            System.out.println("You are the leader! You can draw a Card, type \"d\" to draw a Card: ");
             input = scanner.nextLine();
             if (input.equalsIgnoreCase("d")) {
                 controller.drawNewAdvCard();
@@ -357,8 +789,15 @@ public class Tui implements View {
         }
     }
 
+    private void printNewCard() {
+        clearConsole();
+        System.out.println("A new card has been drawn");
+        controller.getPlayedCard().disegnaCard();
+    }
+
     public void cardEffect() {
         Logger.debug("[cardEffect] chiamato con stato: " + controller.getCardState());
+
         switch (controller.getCardState()) {
             case ENGINE_CHOICE -> {
                 engineChoice();
@@ -444,7 +883,7 @@ public class Tui implements View {
             SldAdvCard card = controller.getPlayedCard();
             List<Planet> planets = card.getPlanets();
             List<Planet> availablePlanets = new ArrayList<>();
-            availablePlanets = planets.stream().filter(x->!x.getPlayer().isPresent()).collect(Collectors.toList());
+            availablePlanets = planets.stream().filter(x->!x.getPlayer().isPresent()).toList();
             System.out.println("Which planet do you want to land on?");
             for (Planet planet : availablePlanets) {
                 System.out.println(planets.indexOf(planet)+1);
@@ -469,27 +908,6 @@ public class Tui implements View {
             // ho messo qua la consegna delle merci come ha fatto toni su abandonedStation, non so se va bene
         }
 
-    }
-
-    /**
-     * Message shown to the client after the registration success, asks for the nickname
-     */
-    private void askNickname() {
-        String nickname = "";
-
-        while (true) {
-            System.out.print("Insert your nickname: ");
-            nickname = scanner.nextLine();
-
-            if (!nickname.isEmpty()) {
-                break;
-            }
-
-            System.out.println(RED + "Nickname cannot be empty!" + RESET);
-        }
-
-        controller.handleNickname(nickname);
-        clearConsole();
     }
 
     /**
@@ -544,351 +962,39 @@ public class Tui implements View {
 
     }
 
-    /**
-     * Message to notify the clients the start of the game
-     */
-    private void printStartGameInfo() {
-        System.out.println(BLUE + "The game has started!" + RESET);
-        System.out.println("Players:");
 
-        printPlayersName();
-
-        //controller.setState(GameState.WAITING);
-    }
-
-    /**
-     * Message to show building ship menu
-     */
-    private void buildingShipMenu() {
-        GameMode mode = controller.getFlyBoard().getMode();
-        if (firstBuilding) {
-            printStartGameInfo();
-            System.out.println(BLUE + "It's time to build your ship!" + RESET);
-            firstBuilding = false;
-            //decido di far partire la clessidra dal client con la firstHousing blu che c'è in ogni partitaAdd commentMore actions
-            if(controller.getShipBoard().getHousingColor().equals(HousingColor.BLUE)  && mode.equals(GameMode.NORMAL)){
-                controller.startHourglass();
-            }
-        }
-        int choice = -1;
-        String input = "";
-
-        System.out.println("1 : Pick covered component");
-        System.out.println("2 : Pick uncovered component");
-        System.out.println("3 : Pick booked component");
-        System.out.println("4 : View other player's ship");
-
-        if (mode.equals(GameMode.NORMAL)) {
-            System.out.println("5 : Look at decks");
-            System.out.println("6 : End ship building");
-            System.out.println("7 : Load automatic shipboard");
-            System.out.println("8 : Rotate hourglass");
-        } else {
-            System.out.println("5 : end building ship");
-        }
-        System.out.print("Make your choice: ");
-
-        input = scanner.nextLine();
-
-        try {
-            choice = Integer.parseInt(input);
-
-            if (choice < 1) {
-                throw new Exception("");
-            } else if (mode.equals(GameMode.NORMAL) && choice > 8) {
-                throw new Exception("");
-            } else if (mode.equals(GameMode.EASY) && choice > 5) {
-                throw new Exception("");
-            }
-        } catch (Exception e) {
-            System.out.println(RED + "Invalid choice!" + RESET);
-            controller.setState(GameState.BUILDING_SHIP);
-            return;
-        }
-        try {
-            if(!controller.getFinishedLastHourglass()){
-                controller.handleBuildingShip(choice);
-            }
-        } catch (CannotRotateHourglassException e) {
-            System.out.println(RED + e.getMessage() + RESET);
-            controller.setState(GameState.BUILDING_SHIP);
-        } catch (RuntimeException e) {
-            Throwable cause = e.getCause();
-            if (cause instanceof CannotRotateHourglassException) {
-                System.out.println(RED + cause.getMessage() + RESET);
-            } else {
-                throw e;
-            }
-            controller.setState(GameState.BUILDING_SHIP);
-        }
-        clearConsole();
-    }
-
-    /**
-     * Prints the menu to add component, asks for row, column and rotation
-     */
-    private void addComponent() {
-        String input = "";
-
-        int row = 0;
-        while (row < 5 || row > 9) {
-            System.out.print("Insert row: ");
-
-            input = scanner.nextLine();
-
-            try {
-                row = Integer.parseInt(input);
-
-                if (row < 5 || row > 9) {
-                    System.out.println(RED + "Invalid row!" + RESET);
-                }
-            } catch (Exception e) {
-                System.out.println(RED + "Invalid row!" + RESET);
-            }
-        }
-
-        int column = 0;
-        while (column < 4 || column > 10) {
-            System.out.print("Insert column: ");
-
-            input = scanner.nextLine();
-
-            try {
-                column = Integer.parseInt(input);
-
-                if (column < 4 || column > 10) {
-                    System.out.println(RED + "Invalid column!" + RESET);
-                }
-            } catch (Exception e) {
-                System.out.println(RED + "Invalid column!" + RESET);
-            }
-        }
-
-        int rotation = -1;
-        while (rotation < 0 || rotation > 3) {
-            System.out.print("Insert rotation: ");
-
-            input = scanner.nextLine();
-
-            try {
-                rotation = Integer.parseInt(input);
-
-                if (rotation < 0 || rotation > 3) {
-                    System.out.println(RED + "Invalid rotation!" + RESET);
-                }
-            } catch (Exception e) {
-                System.out.println(RED + "Invalid rotation!" + RESET);
-            }
-        }
-
-        ShipBoard ship = controller.getShipBoard();
-        Cordinate cord = new Cordinate(row - ship.getOffsetRow(), column - ship.getOffsetCol());
-        try {
-            controller.addComponent(cord, rotation);
-        } catch (InvalidCordinate e) {
-            controller.setState(GameState.ERROR_PLACEMENT);
-        }
-        clearConsole();
-    }
-
-    private void viewShipBuilding() {
-        System.out.println("These are the players: ");
-        printPlayersName();
-
-        String chosenPlayer = "";
-
-        while (true) {
-            System.out.print("Insert nickname to look at: ");
-            chosenPlayer = scanner.nextLine();
-
-            try {
-                if (chosenPlayer.isEmpty()) {
-                    System.out.println(RED + "Invalid nickname!" + RESET);
-                } else {
-                    controller.getFlyBoard().getPlayerByUsername(chosenPlayer).getShipBoard().drawShipboard();
-                    break;
-                }
-            } catch (IncorrectFlyBoardException e) {
-                System.out.println(RED + "Invalid nickname!" + RESET);
-            }
-        }
-
-
-        controller.setState(GameState.BUILDING_SHIP);
-    }
-
-    private void componentMenu() {
-        System.out.println("This is the component you've drawn:");
-        new ShipCell(controller.getFlyBoard().getComponentById(controller.getInHandComponent())).drawCell();
-        controller.getShipBoard().drawShipboard();
-
-        int choice = -1;
-        String input = "";
-
-        while (choice < 1 || choice > 3) {
-            System.out.println("1 : Insert in the shipboard");
-            System.out.println("2 : Put back in the deck");
-            System.out.println("3 : Save for later");
-            System.out.print("Make your choice: ");
-
-            input = scanner.nextLine();
-
-            try {
-                choice = Integer.parseInt(input);
-
-                if (choice < 1 || choice > 3) {
-                    System.out.println(RED + "Invalid choice!" + RESET);
-                }
-            } catch (Exception e) {
-                System.out.println(RED + "Invalid choice!" + RESET);
-            }
-        }
-
-        if (choice == 1) {
-            controller.setState(GameState.ADD_COMPONENT);
-        } else if (choice == 2) {
-            controller.discardComponent();
-        } else if (choice == 3) {
-            controller.bookComponent();
-        }
-    }
-
-    private void drawUncoveredComponents() {
-        int count = 1;
-        if (controller.getFlyBoard().getUncoveredComponents().isEmpty()) {
-            System.out.println("No uncovered Components");
-            controller.setState(GameState.BUILDING_SHIP);
-            return;
-        }
-
-        for (int idComp : controller.getFlyBoard().getUncoveredComponents()) {
-            System.out.println("Component #" + idComp);
-            Component component = controller.getFlyBoard().getComponentById(idComp);
-            new ShipCell(component).drawCell();
-        }
-
-        System.out.print("Select component to draw (-1 to null) : ");
-        int chosen = Integer.parseInt(scanner.nextLine());
-
-        //todo controllo dell'input
-
-        if (chosen == -1)
-            controller.setState(GameState.BUILDING_SHIP);
-        else
-            controller.drawUncovered(chosen);
-    }
-
-    private void viewDecksList() {
-        System.out.println("Available decks : ");
-        for (int numberDeck : controller.getFlyBoard().getAvailableDecks()) {
-            System.out.println("Deck #" + numberDeck);
-        }
-        System.out.print("Choose deck number : ");
-        int chosen = Integer.parseInt(scanner.nextLine());
-
-        controller.bookDeck(chosen);
-    }
-
-    private void viewDeck() {
-        System.out.println("hai in mano il deck #" + controller.getInHandDeck());
-        System.out.println("premere invio per continuare");
-
-        String buffer = scanner.nextLine();
-        controller.freeDeck();
-    }
-
-    private void printPlayersName() {
-        synchronized (controller.getFlyboardLock()) {
-            FlyBoard flyBoard = controller.getFlyBoard();
-            int count = 1;
-
-            for (Player player : flyBoard.getPlayers()) {
-                System.out.println((count++) + " " + player.getNickname() + " : " + player.getColor());
-            }
-        }
-    }
-
-    private void viewBookedComponents() {
-        List<Optional<Integer>> bookedComponents = controller.getShipBoard().getBookedComponents();
-        int count = 1;
-
-        for (Optional<Integer> booked : bookedComponents) {
-            if (booked.isEmpty())
-                continue;
-
-            System.out.println("Component # " + count++);
-            Component component = controller.getFlyBoard().getComponentById(booked.get());
-            new ShipCell(component).drawCell();
-        }
-
-        System.out.print("Select component to draw (-1 to null) : ");
-        int chosen = Integer.parseInt(scanner.nextLine());
-
-        //todo controllo dell'input
-        controller.choseBookedComponent(chosen);
-    }
-
-    private void switchBookedComponents() {
-        List<Integer> possibles = new ArrayList<>();
-
-        List<Optional<Integer>> bookedComponents = controller.getShipBoard().getBookedComponents();
-        for (Optional<Integer> optComp : bookedComponents) {
-            if (optComp.isEmpty())
-                continue;
-
-            possibles.add(optComp.get());
-            System.out.println("Component #" + optComp.get());
-            new ShipCell(controller.getFlyBoard().getComponentById(optComp.get())).drawCell();
-        }
-
-        int chosenComp;
-        while (true) {
-            System.out.println("Select the component to switch (enter to escape) : ");
-            String string = scanner.nextLine();
-
-            if (string.equals("")) {
-                controller.setState(GameState.COMPONENT_MENU);
-                return;
-            } else {
-                try {
-                    chosenComp = Integer.parseInt(string);
-                    if (!possibles.contains(chosenComp))
-                        throw new NumberFormatException("");
-
-                    break;
-                } catch (NumberFormatException e) {
-                    System.out.println(RED + "Invalid chosen component" + RESET);
-                    throw new RuntimeException(e);
-                }
-            }
-        }
-
-        controller.bookComponent(possibles.indexOf(chosenComp));
-    }
 
     private void chooseBuiltShip() {
         controller.builtDefault();
     }
 
     private void engineChoice() {
+
         int maxAvailable;
         synchronized (controller.getShipboardLock()) {
             ShipBoard shipBoard = controller.getShipBoard();
+            shipBoard.drawShipboard();
             maxAvailable = Integer.min(shipBoard.getQuantBatteries(), shipBoard.getDoubleEngine().size());
         }
-        int activated = -1;
-        while (activated < 0 || activated > maxAvailable) {
-            System.out.println("Select the number of double engines to activate (max " + maxAvailable + " : )");
-            try {
-                activated = scanner.nextInt();
-            }catch(InputMismatchException e){
-                scanner.next();
-                activated = -1;
+
+        if (maxAvailable > 0) {
+            int activated = -1;
+            while (activated < 0 || activated > maxAvailable) {
+                System.out.println("Select the number of double engines to activate (max " + maxAvailable + " : )");
+                try {
+                    activated = scanner.nextInt();
+                } catch (InputMismatchException e) {
+                    scanner.next();
+                    activated = -1;
+                }
+                if (activated >= 0 && activated <= maxAvailable)
+                    controller.activateDoubleEngine(activated);
+                else
+                    System.out.println(RED + "Invalid activated engine" + RESET);
             }
-            if (activated >= 0 && activated <= maxAvailable)
-                controller.activateDoubleEngine(activated);
-            else
-                System.out.println(RED + "Invalid activated engine" + RESET);
+        }
+        else{
+            controller.activateDoubleEngine(0);
         }
     }
 
@@ -934,19 +1040,8 @@ public class Tui implements View {
     private void crewRemove() {
         SldAdvCard card = controller.getPlayedCard();
         Logger.debug("sono in crewRemove");
-        int toRemove = -1;
+        int toRemove = card.getCrewLost();
 
-        switch (controller.getPlayedCard()) {
-            case SldCombatZone combatZone ->{
-                for (CombatLine line : combatZone.getLines()){
-                    if (line.getPenalties().getFirst().getType().equals(PenaltyType.CREW))
-                        toRemove = line.getPenalties().getFirst().getAmount();
-                }
-            }
-            default -> {
-                toRemove = card.getCrewLost();
-            }
-        }
         List<Cordinate> crewPositionsToRemove = new ArrayList<>();
 
         System.out.println("Now you have to select " + toRemove + " guest, the selected ones will be deleted from your shipBoard");
@@ -1190,6 +1285,11 @@ public class Tui implements View {
                 direction = cannon.getDirection();
             }
 
+            case SldCombatZone combatZone -> {
+                CannonPenalty cannon =controller.getCannon();
+                direction = cannon.getDirection();
+            }
+
             default -> Logger.error("caso non previsto");
         }
 
@@ -1206,6 +1306,13 @@ public class Tui implements View {
                 CannonPenalty cannon = controller.getCannon();
                 System.out.println("Light cannot hit component in " + cannon.getCordinateHit());
             }
+
+            case SldCombatZone combatZone -> {
+                CannonPenalty cannon = controller.getCannon();
+                System.out.println("Light cannot hit component in " + cannon.getCordinateHit());
+            }
+
+
 
             default -> Logger.error("caso non previsto");
         }
@@ -1236,6 +1343,10 @@ public class Tui implements View {
 
             case SldPirates pirates -> {
                 CannonPenalty cannon = controller.getCannon();
+                controller.advanceCannon(destroyedComp, !destroyedComp);
+            }
+
+            case SldCombatZone combatZone -> {
                 controller.advanceCannon(destroyedComp, !destroyedComp);
             }
 
@@ -1273,15 +1384,20 @@ public class Tui implements View {
                     }
 
                     while (choice.equals("")) {
-                        System.out.print("Activate one double drill (y/n) : ");
-                        choice = scanner.nextLine().trim().toLowerCase();
+                        if (controller.getShipBoard().getQuantBatteries() > 0) {
+                            System.out.print("Activate one double drill (y/n) : ");
+                            choice = scanner.nextLine().trim().toLowerCase();
 
-                        if (!(choice.equals("y") || choice.equals("n"))) {
-                            choice = "";
-                            continue;
+                            if (!(choice.equals("y") || choice.equals("n"))) {
+                                choice = "";
+                                continue;
+                            }
+                            boolean destroyed = choice.equals("y");
+                            controller.advanceMeteor(destroyed, !destroyed);
                         }
-                        boolean destroyed = choice.equals("y");
-                        controller.advanceMeteor(destroyed, !destroyed);
+                        else{
+                            controller.advanceMeteor(true, false);
+                        }
                     }
                 }
 
@@ -1353,7 +1469,124 @@ public class Tui implements View {
         System.out.println("Look at your shipboard and check your crew!");
     }
 
+    /** SECONDARY METHOD */
     private void clearConsole() {
         System.out.print("\033[H\033[2J");
+    }
+
+    private void printPlayersName() {
+        synchronized (controller.getFlyboardLock()) {
+            FlyBoard flyBoard = controller.getFlyBoard();
+            int count = 1;
+
+            for (Player player : flyBoard.getPlayers()) {
+                System.out.println((count++) + " " + player.getNickname() + " : " + player.getColor());
+            }
+        }
+    }
+
+    private void printShipAndDrewComponent() {
+        System.out.println("This is the component you've drawn:");
+        new ShipCell(controller.getFlyBoard().getComponentById(controller.getInHandComponent())).drawCell();
+        controller.getShipBoard().drawShipboard();
+    }
+
+    private void printUncoveredComponent() {
+        for (int idComp : controller.getFlyBoard().getUncoveredComponents()) {
+            System.out.println("Component #" + idComp);
+            Component component = controller.getFlyBoard().getComponentById(idComp);
+            new ShipCell(component).drawCell();
+        }
+    }
+
+    private void printDeck() {
+        for (int cardId : controller.getFlyBoard().getLittleDecks().get(controller.getInHandDeck()))
+            controller.getFlyBoard().getSldAdvCardByID(cardId).disegnaCard();
+    }
+
+    private void addCrewMenu(){
+
+        Map<Cordinate, List<GuestType>> addedCrew = new HashMap<>();
+        ShipBoard shipBoard = controller.getShipBoard();
+
+
+        while (true) {
+            shipBoard.drawShipboard();
+
+            int choice;
+            System.out.println("1. Human");
+            System.out.println("2. Purple Alien");
+            System.out.println("3. Brown Alien");
+            System.out.print("Select the crew member to add (0 to exit) : ");
+
+            try {
+                choice = Integer.parseInt(scanner.nextLine());
+
+                if (choice < 0 || choice > 3) {
+                    choice = -1;
+                    continue;
+                }
+            } catch (NumberFormatException e) {
+                choice = -1;
+                System.out.println(RED + "Choice not valid. Try Again.");
+                continue;
+            }
+
+
+            GuestType guestSelected = null;
+            if (choice == 0) {
+                break;
+
+            } else if (choice == 1) {
+                guestSelected = GuestType.HUMAN;
+            } else if (choice == 2) {
+                guestSelected = GuestType.PURPLE;
+            } else if (choice == 3) {
+                guestSelected = GuestType.BROWN;
+            }
+
+            List<Cordinate> availableCord = shipBoard.getAvailableHousing(guestSelected);
+            if (availableCord.isEmpty()) {
+                System.out.println("No available housing to guest this crew mamber.");
+                continue;
+            }
+
+            for (int i = 0; i < availableCord.size(); i++) {
+                System.out.println((i + 1) + ". " + availableCord.get(i));
+            }
+            System.out.print("Select where to add a " + guestSelected + " (0 to exit) : ");
+
+            int secondChoice = -1;
+            while (secondChoice == -1) {
+                try {
+                    secondChoice = Integer.parseInt(scanner.nextLine());
+
+                    if (secondChoice < 0 || secondChoice > availableCord.size() + 1) {
+                        secondChoice = -1;
+                        continue;
+                    }
+                } catch (NumberFormatException e) {
+                    secondChoice = -1;
+                    System.out.println(RED + "Invalid Selection. Try Again.");
+                }
+            }
+
+            if (secondChoice == 0){
+                continue;
+            }
+
+            secondChoice -= 1;
+            Cordinate chosenCord = availableCord.get(secondChoice);
+
+            if (addedCrew.containsKey(chosenCord)){
+                addedCrew.get(chosenCord).add(guestSelected);
+            }
+            else{
+                addedCrew.put(chosenCord, new ArrayList<>());
+                addedCrew.get(chosenCord).add(guestSelected);
+            }
+        }
+
+        controller.addCrew(addedCrew);
     }
 }
